[MIG] website_hr_department migrate to v10

--- a/website_hr_department/views/website_hr_department.xml
+++ b/website_hr_department/views/website_hr_department.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
-  <data>
-
+<!-- Copyright 2017 ACSONE SA/NV
+     License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
+<odoo>
     <template id="assets_frontend" inherit_id="website.assets_frontend" name="Shop">
       <xpath expr="." position="inside">
         <link rel="stylesheet" href="/website_hr_department/static/src/css/website_hr_department.css"/>
@@ -166,6 +166,5 @@
         </div>
       </xpath>
     </template>
-  </data>
 
-</openerp>
+</odoo>
