--- a/website_menu_by_user_status/views/website_templates.xml
+++ b/website_menu_by_user_status/views/website_templates.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright 2013-2017 Savoir-faire Linux (<http://www.savoirfairelinux.com>)
+     License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
 <odoo>
     <data>
         <template id="website_display_menu" name="Conditional display menu"
